# cinema-service

./: .gitignore  CMakeLists.txt  README.md  client.cc  main.cc
src/: BlockedQueue.hh  Cinema.cc  Cinema.hh  Client.cc  Client.hh  Movie.cc  Movie.hh  Service.cc  Service.hh
